--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     "regions": ["sin1"],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/api"
+            "src": "/api(.*)",
+            "dest": "/cmd/main.go"
         }
     ]
 }
