--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "version": 2,
     "regions": ["sin1"],
+    "trailingSlash": false,
     "routes": [
         {
             "src": "/api(.*)",
